New fact box header

--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -3,13 +3,13 @@
   <p>Component for facts. Use in articles.</p>
   <div class="bs-example" data-example-id="ku-factboxes">
     <div class="factbox">
-      <h3>Lorem Ipsum!</h3>
+      <div class="fact-title">Lorem Ipsum!</div>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae enim non nibh egestas egestas. In hac habitasse platea dictumst. Duis tempus ipsum in arcu sodales varius. Cras a lorem tempor, euismod orci at, aliquam enim. Nunc ac luctus sem. Quisque maximus tellus id nunc viverra, vel bibendum purus consectetur. Ut maximus accumsan ipsum ac auctor.
     </div>
   </div>
   {% highlight html %}
   <div class="factbox">
-    <h3>Lorem Ipsum!</h3>
+    <div class="fact-title">Lorem Ipsum!</div>
     Lorem ipsum...
   </div>
   {% endhighlight %}
