--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -277,6 +277,12 @@
     margin: 0 0 10px;
   }
 
+  .fact-title {
+    margin-bottom: 10px;
+    font-size: @font-size-h3;
+    font-weight: 600;
+  }
+
   &-left {
     float: left;
     margin-right: 20px;
