--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -2,16 +2,16 @@
   <h1 id="ku-factboxes" class="page-header">KU fact boxes</h1>
   <p>Component for facts. Use in articles.</p>
   <div class="bs-example" data-example-id="ku-factboxes">
-    <div class="factbox">
+    <aside class="factbox">
       <div class="fact-title">Lorem Ipsum!</div>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae enim non nibh egestas egestas. In hac habitasse platea dictumst. Duis tempus ipsum in arcu sodales varius. Cras a lorem tempor, euismod orci at, aliquam enim. Nunc ac luctus sem. Quisque maximus tellus id nunc viverra, vel bibendum purus consectetur. Ut maximus accumsan ipsum ac auctor.
-    </div>
+    </aside>
   </div>
   {% highlight html %}
-  <div class="factbox">
+  <aside class="factbox">
     <div class="fact-title">Lorem Ipsum!</div>
     Lorem ipsum...
-  </div>
+  </aside>
   {% endhighlight %}
   Use <code>&lt;div class=&quot;factbox factbox-left&quot;&gt;</code> in order to left align the fact box.
 </div>
