--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -47,9 +47,11 @@
   text-decoration: none!important;
   width: 100%;
   height: 100%;
+  color: @text-color;
 
   &:hover {
     text-decoration: none;
+    color: inherit;
   }
 }
 
