--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -213,7 +213,7 @@ body:not(.FullWidthFrontpage) .double-column {
   }
 }
 // Special styling for IE11:
-@media all and (min-width: @screen-xs) and (min-width: @screen-xs-max)  and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+@media all and (min-width: @screen-xs) and (max-width: @screen-xs-max)  and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .tiles-x {
     .tile-img {
       flex: 0 0 70%;
