--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -221,7 +221,7 @@ body:not(.FullWidthFrontpage) .double-column {
   }
 }
 // IE Edge
-@media all and (min-width: @screen-xs-max) {
+@media all and (max-width: @screen-xs-max) {
   @supports (-ms-ime-align: auto) {
     // Mobile view - list type
     .tilebox {
