--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -4,7 +4,7 @@
   <div class="bs-example" data-example-id="ku-factboxes">
     <aside class="factbox">
       <div class="fact-title">Lorem Ipsum!</div>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae enim non nibh egestas egestas. In hac habitasse platea dictumst. Duis tempus ipsum in arcu sodales varius. Cras a lorem tempor, euismod orci at, aliquam enim. Nunc ac luctus sem. Quisque maximus tellus id nunc viverra, vel bibendum purus consectetur. Ut maximus accumsan ipsum ac auctor.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae enim non nibh egestas egestas. In hac habitasse platea dictumst. Duis tempus ipsum in arcu sodales varius.
     </aside>
   </div>
   {% highlight html %}
