--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -6,7 +6,6 @@
   // Wrap in class .tiles-plugin when used with Isotope plugin
   &.tiles-x {
     .tilebox {
-      opacity: 0;
       margin-bottom: 23px;
     }
     @media (max-width: @screen-xs-max) {
@@ -23,13 +22,6 @@
         height: @gridbox1;
         width: @default-col-width;
       }
-    }
-  }
-
-  &.is-showing {
-    .tilebox {
-      // reveal when ready
-      opacity: 1;
     }
   }
 }
@@ -63,15 +55,25 @@
   margin-top: 0;
 }
 
-.header-small {
-  font-weight: 700;
-  color: @gray-light;
-  text-transform: uppercase;
-  letter-spacing: 0.4px;
-  margin-bottom: 5px;
+.tile-cat {
+  display: flex;
+  justify-content: space-between;
+
+  .header-small {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: 700;
+    color: @gray-light;
+    text-transform: uppercase;
+    letter-spacing: 0.4px;
+    margin-bottom: 5px;
+  }
 
   .date {
-    float: right;
+    font-weight: 700;
+    color: @gray-light;
+    text-align: right;
     padding-left: 5px;
     margin-right: 5px;
   }
@@ -79,6 +81,12 @@
 
 .tiles-x {
   .tiles-x-layout();
+
+  .tile-cat {
+    .date {
+      flex-basis: 52%;
+    }
+  }
 
   &:not(.tiles-plugin) {
     .tilebox {
@@ -89,6 +97,7 @@
 
 .tiles-y {
   .tiles-y-layout();
+
 }
 @media all and (min-width: @screen-sm) {
   .tiles-y {
