--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -80,6 +80,7 @@
 
 .tiles-x {
   .tiles-x-layout();
+  padding-top: 15px;
 
   .tile-cat {
     .date {
@@ -96,7 +97,6 @@
 
 .tiles-y {
   .tiles-y-layout();
-
 }
 @media all and (min-width: @screen-sm) {
   .tiles-y {
@@ -232,7 +232,6 @@ body:not(.FullWidthFrontpage) .double-column {
 @media all and (max-width: @screen-xs-max) {
   @supports (-ms-ime-align: auto) {
     // Mobile view - list type
-
     .tiles-y {
       .tile-link,
       .tilebox {
