--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -66,14 +66,10 @@
   }
 
   .tilebox {
-    padding-bottom: 15px;
+    padding: 15px 0;
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid @gray;
-
-    & + .tilebox {
-      padding-top: 15px;
-    }
   }
 
   .tile-img {
