--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -42,7 +42,7 @@
   height: 100%;
   color: @text-color;
 
-  &:hover {
+  &:hover, &:visited {
     text-decoration: none;
     color: inherit;
   }
@@ -212,22 +212,22 @@ body:not(.FullWidthFrontpage) .double-column {
     }
 
     .tile-img {
-      flex: 0 0 70%;
+      flex: 1;
     }
 
     .tile-content {
-      flex: 1;
+      flex: 1 1 0px;
     }
   }
 }
 // Special styling for IE11:
-@media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .tiles-x {
-    .tile-img {
-      flex: 0 0 70%;
-    }
-  }
-}
+// @media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+//   .tiles-x {
+//     .tile-img {
+//       flex: 0 0 70%;
+//     }
+//   }
+// }
 // Special styling for IE Edge
 @media all and (max-width: @screen-xs-max) {
   @supports (-ms-ime-align: auto) {
@@ -239,11 +239,11 @@ body:not(.FullWidthFrontpage) .double-column {
       }
 
       .tile-img {
-        flex: 0 0 auto;
+        flex: 1
       }
 
       .tile-content {
-        flex: 1;
+        flex: 1 1 0px;
       }
     }
   }
