--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -221,13 +221,16 @@ body:not(.FullWidthFrontpage) .double-column {
   }
 }
 // Special styling for IE11:
-// @media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-//   .tiles-x {
-//     .tile-img {
-//       flex: 0 0 70%;
-//     }
-//   }
-// }
+@media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .tiles-x {
+    .tile-img {
+      flex: 1 0 20%;
+    }
+    .tile-content {
+      flex: 1 0 0%;
+    }
+  }
+}
 // Special styling for IE Edge
 @media all and (max-width: @screen-xs-max) {
   @supports (-ms-ime-align: auto) {
