--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -212,11 +212,11 @@ body:not(.FullWidthFrontpage) .double-column {
     }
 
     .tile-img {
-      flex: 1;
+      flex: 0 0 auto;
     }
 
     .tile-content {
-      flex: 1 1 0px;
+      flex: 1 1 auto;
     }
   }
 }
