--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -244,11 +244,11 @@ body:not(.FullWidthFrontpage) .double-column {
 @media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .tiles-x {
     .tile-img {
-      flex: 0 0 60%;
+      flex: 1 0 20%;
     }
 
     .tile-content {
-      flex: 1 1 auto;
+      flex: 1 0 0;
     }
   }
 }
