--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -42,7 +42,8 @@
   height: 100%;
   color: @text-color;
 
-  &:hover {
+  &:hover,
+  &:visited {
     text-decoration: none;
     color: inherit;
   }
