--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -79,6 +79,12 @@
     // flex: none;
     margin-bottom: 10px;
   }
+
+  @media all and (max-width: @screen-xs-max) {
+    .tile-body {
+      display: none;
+    }
+  }
 }
 
 .tiles-y-desktop-layout() {
