--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -214,10 +214,11 @@ body:not(.FullWidthFrontpage) .double-column {
 
     .tile-img {
       flex: 0 0 auto;
+      overflow: hidden;
     }
 
     .tile-content {
-      flex: 1;
+      flex: 1 1 auto;
     }
   }
 }
