--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -242,7 +242,7 @@ body:not(.FullWidthFrontpage) .double-column {
 
       .tile-img {
         flex: 0 0 60%;
-        overflow: auto;
+        overflow: hidden;
       }
 
       .tile-content {
