--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -76,6 +76,8 @@
     color: @gray-light;
     text-align: right;
     padding-left: 5px;
+    margin-bottom: 5px;
+    white-space: nowrap;
   }
 }
 
