--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -17,11 +17,22 @@
     }
   }
   @media all and (min-width: @screen-sm) {
-    &.tiles-x {
-      .tilebox {
-        height: @gridbox1;
-        width: @default-col-width;
+    .newsbox {
+      // Inserted as syandalone grid element
+      &.tiles-x {
+        .tilebox {
+          height: @gridbox1;
+          width: @default-col-width;
+        }
       }
+    }
+  }
+}
+@media all and (min-width: @screen-sm) {
+  .tiles-x {
+    .tilebox {
+      height: @gridbox1;
+      width: @default-col-width;
     }
   }
 }
