--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -17,22 +17,22 @@
     }
   }
   @media all and (min-width: @screen-sm) {
-    .newsbox {
-      // Inserted as syandalone grid element
-      &.tiles-x {
-        .tilebox {
-          height: @gridbox1;
-          width: @default-col-width;
-        }
+    &.tiles-x {
+      .tilebox {
+        height: @gridbox1;
+        width: @default-col-width;
       }
     }
   }
 }
 @media all and (min-width: @screen-sm) {
-  .tiles-x {
-    .tilebox {
-      height: @gridbox1;
-      width: @default-col-width;
+  .newsbox {
+    // Inserted as standalone grid element
+    .tiles-x {
+      .tilebox {
+        height: @gridbox1;
+        width: @default-col-width;
+      }
     }
   }
 }
@@ -41,6 +41,8 @@
   img {
     object-fit: cover;
     float: none;
+    flex: none;
+    .img-responsive;
   }
 }
 
