--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -227,7 +227,16 @@ body:not(.FullWidthFrontpage) .double-column {
 @media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .tiles-x {
     .tile-img {
-      flex: 0 0 70%;
+      position: relative;
+
+      img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%) translate3d(0px, 0px, 0px);
+        backface-visibility: hidden;
+        -ms-interpolation-mode: bicubic;
+      }
     }
   }
 }
