--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -224,22 +224,22 @@ body:not(.FullWidthFrontpage) .double-column {
   }
 }
 // Special styling for IE11:
-@media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .tiles-x {
-    .tile-img {
-      position: relative;
-
-      img {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%) translate3d(0px, 0px, 0px);
-        backface-visibility: hidden;
-        -ms-interpolation-mode: bicubic;
-      }
-    }
-  }
-}
+// @media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+//   .tiles-x {
+//     .tile-img {
+//       position: relative;
+//
+//       img {
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         transform: translateX(-50%) translateY(-50%) translate3d(0px, 0px, 0px);
+//         backface-visibility: hidden;
+//         -ms-interpolation-mode: bicubic;
+//       }
+//     }
+//   }
+// }
 // Special styling for IE Edge
 @media all and (max-width: @screen-xs-max) {
   @supports (-ms-ime-align: auto) {
