--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -4,7 +4,8 @@
 
 .tiles-plugin {
   // Wrap in class .tiles-plugin when used with Isotope plugin
-    padding-top: 15px;
+  padding-top: 15px;
+
   &.tiles-x {
     .tilebox {
       margin-bottom: 23px;
@@ -191,7 +192,6 @@ body:not(.FullWidthFrontpage) .double-column {
     }
   }
 }
-
 @media all and (min-width: @screen-sm) {
   .newsbox {
     // Inserted as standalone grid element
@@ -201,10 +201,17 @@ body:not(.FullWidthFrontpage) .double-column {
         // width: @default-col-width;
       }
     }
+
+    .double-column & {
+      .tiles-x {
+        .tilebox {
+          height: @special-tiles-hight;
+          // width: @default-col-width;
+        }
+      }
+    }
   }
 }
-
-
 // Special styling for IE11:
 @media all and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .tiles-x {
@@ -215,7 +222,6 @@ body:not(.FullWidthFrontpage) .double-column {
 
   .tiles-y {
     // Mobile view - list type
-
     .tile-img {
       flex: 0 0 60%;
       overflow: hidden;
