--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -20,9 +20,8 @@ Remember to assign new styles to a class or id containing the admin-elements
 body {
   display: block !important;
   /* override flex */
-  -webkit-box-orient: vertical !important;
-  -webkit-box-direction: normal !important;
   -ms-flex-direction: unset !important;
+  -webkit-flex-direction: unset !important;
   flex-direction: unset !important;
 }
 
@@ -1712,9 +1711,8 @@ h1.obvius-logo img {
 }
 
 .obvius-common .flexiblebox-as-rightbox .gridbox {
-  -webkit-box-orient: vertical !important;
-  -webkit-box-direction: normal !important;
   -ms-flex-direction: column !important;
+  -webkit-flex-direction: column !important;
   flex-direction: column !important;
 }
 
@@ -3806,12 +3804,10 @@ div.multipathlist {
   overflow: auto;
   min-width: 45em;
   background: #fff;
-  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 
 .mplcontainer .multipathlist * {
-  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 
@@ -4037,7 +4033,6 @@ figure, .figure {
 }
 
 #obvius_gridcontent_gridcontent .icon, #obvius_gridcontent_gridcontent_right .icon {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: inherit;
 }
@@ -4292,7 +4287,6 @@ div.gridcontent-dialog {
   margin-left: -300px;
   z-index: 10000;
   display: none;
-  -webkit-box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.5);
   box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.5);
 }
 
@@ -4314,7 +4308,6 @@ div.gridcontent-dialog h1 {
 }
 
 .obvius-editengine form div.obvius-editengine-confirmation>#gridcontent-dialog-edit-flexiblebox * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -4563,7 +4556,6 @@ div.calendarpicker {
   cursor: not-allowed;
   zoom: 1;
   filter: alpha(opacity=70);
-  -webkit-box-shadow: none;
   box-shadow: none;
   opacity: .70;
   background-color: #eee;
@@ -4610,7 +4602,6 @@ div.calendarpicker {
   background-color: #F2F2F2;
   border: solid 1px #ddd;
   border-width: 1px 0 1px 1px;
-  -webkit-transition: margin 0.5s;
   transition: margin 0.5s;
   width: 20em;
   float: right;
@@ -4875,13 +4866,11 @@ div.subsiteedit div.radiochoice label {
 /* Dragsort */
 .handle, .handle[style="cursor: pointer;"] {
   cursor: grab !important;
-  cursor: -webkit-grab !important;
   cursor: -moz-grab !important;
 }
 
 .handle[style="cursor: move;"] {
   cursor: grabbing !important;
-  cursor: -webkit-grabbing !important;
   cursor: -moz-grabbing !important;
 }
 
@@ -5024,7 +5013,6 @@ div.subsiteedit div.radiochoice label {
 }
 
 .obvius-common input.form-control, .obvius-common textarea.form-control {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -5376,9 +5364,8 @@ div.subsiteedit div.radiochoice label {
 }
 
 #content .single-column .column1 .gridnyhed {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
   -ms-flex-direction: row;
+  -webkit-flex-direction: row;
   flex-direction: row;
 }
 
@@ -5401,8 +5388,8 @@ div.subsiteedit div.radiochoice label {
 
 /*Bootstrap overide*/
 #obvius_gridcontent_gridcontent .social-icons .icon {
-  display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   width: 31px;
   height: 31px;
@@ -5554,13 +5541,20 @@ audio, video {
 .imgradio {
   width: 300px;
 }
+
 #gridcontent-dialog-edit-newsbox {
   width: 750px;
 }
-#gridcontent-dialog-edit-newsbox .dialogcontent{
+
+#gridcontent-dialog-edit-newsbox .dialogcontent {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
   flex-direction: row;
 }
+
 #gridcontent-dialog-edit-newsbox .tilebox {
   height: 289px;
   width: 235px;
@@ -5585,11 +5579,13 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
   width: 23em;
   z-index: 100;
 }
+
 .drawer {
   position: relative;
   overflow-x: hidden;
   overflow-y: visible;
 }
+
 .drawer-wrapper {
   transition: left 0.5s;
   position: relative;
@@ -5599,9 +5595,11 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
   /*position: relative;*/
   overflow: hidden;
 }
+
 .drawer.closed .drawer-wrapper {
   left: 19em;
 }
+
 .drawer-content {
   margin-left: 3em;
   width: 20em;
@@ -5612,7 +5610,9 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
   border-width: 1px 0 1px 1px;
   padding: 1em 0;
 }
+
 .drawer .toggle {
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(-90deg) translateX(-50%) translateY(50%);
   transform: translateX(-50%) translateY(-50%) rotate(-90deg) translateX(-50%) translateY(50%);
   position: absolute;
   width: auto;
@@ -5629,52 +5629,63 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
   border-radius: 0.5em 0.5em 0 0;
   cursor: pointer;
 }
+
 .drawer .toggle:hover,
 .drawer .toggle:active {
   background: #aaa;
   color: #fff;
   text-decoration: none;
 }
+
 .drawer h1 {
   background-color: #ddd;
   margin: 0 0 1em;
   padding: 0.5em 1em;
   font-weight: normal;
 }
+
 .drawer p {
   padding: 0 1em;
   margin: 0;
 }
+
 .drawer p.value {
   font-weight: bold;
   padding-bottom: 1em;
 }
+
 .drawer hr {
   border-bottom: none;
   border-left: none;
   border-right: none;
   color: #ddd;
 }
+
 #updatealerts .drawer-content {
   min-height: 13em;
 }
+
 #alert-edit-form {
   text-align: left;
 }
+
 #alert-edit-form *[name=text] {
   display: block;
   width: 100%;
   height: 6em;
 }
+
 #alert-edit-form label {
   display: block;
   font-weight: bold;
 }
+
 #alert-edit-form .hint td.key {
   font-family: Monospace;
   width: 20%;
   text-align: left;
 }
+
 #alert-edit-form .hint td.desc {
   width: 80%;
 }
