--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -29,6 +29,11 @@
     }
   }
 
+  .tile-cat {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .tile-body {
     display: none;
   }
