IE11 news list height

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -220,6 +220,10 @@ body:not(.FullWidthFrontpage) .double-column {
 
   .tiles-y {
     // Mobile view - list type
+    .tilebox {
+      height: @gridbox1;
+    }
+
     .tile-img {
       flex: 0 0 60%;
       overflow: hidden;
