--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -185,9 +185,11 @@ body:not(.FullWidthFrontpage) .double-column {
 @media (max-width: @screen-sm-max) {
   .FullWidthFrontpage .triple-column,
   .double-column,
-  .single-column .tiles-x:not(.tiles-plugin) {
-    .tile-body {
-      display: block;
+  .single-column {
+    .tiles-x:not(.tiles-plugin) {
+      .tile-body {
+        display: block;
+      }
     }
   }
 }
