--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -235,6 +235,14 @@ body:not(.FullWidthFrontpage) .double-column {
       flex: 1 0 auto;
     }
   }
+
+  .FullWidthFrontpage .triple-column,
+  .double-column,
+  .single-column {
+    .tiles-x:not(.tiles-plugin) {
+      height: @special-tiles-hight;
+    }
+  }
 }
 // Special styling for IE11:
 @media all and (min-width: @screen-xs) and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
