IE11 news list height

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -239,7 +239,7 @@ body:not(.FullWidthFrontpage) .double-column {
   .FullWidthFrontpage .triple-column,
   .double-column,
   .single-column {
-    .tiles-x:not(.tiles-plugin) {
+    .tiles-y:not(.tiles-plugin) {
       height: @special-tiles-hight;
     }
   }
