Edge image size

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -273,3 +273,13 @@ body:not(.FullWidthFrontpage) .double-column {
     }
   }
 }
+
+  @supports (-ms-ime-align: auto) {
+    .tile-x {
+      .tile-img {
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
