--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -76,11 +76,16 @@
   }
 
   .tilebox {
-    width: 100%;
     padding: 15px 0;
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid @gray;
+
+    &.no-img {
+      .tile-content {
+        width: 100%;
+      }
+    }
   }
 
   .tile-img {
