--- a/less/navbar.less
+++ b/less/navbar.less
@@ -370,7 +370,8 @@
       > li {
         display: block;
         width: 100%;
-        min-width: 250px;
+        //min-width: 250px;
+        min-width: 480px;
         padding: 5px;
         overflow: auto;
         white-space: normal;
@@ -391,7 +392,7 @@
           display: block;
           float: left;
           margin: 0 8px 5px 2px;
-          .img-thumbnail;
+          //.img-thumbnail;
         }
 
         + li {
