--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -225,6 +225,9 @@ body:not(.FullWidthFrontpage) .double-column {
     // Mobile view - list type
     .tilebox {
       height: @gridbox1;
+      &.no-img {
+        height: auto;
+      }
     }
 
     .tile-img {
