--- a/less/navbar.less
+++ b/less/navbar.less
@@ -371,9 +371,9 @@
         display: block;
         width: 100%;
         //min-width: 250px;
-        min-width: 480px;
+        min-width: 450px;
         padding: 5px;
-        overflow: auto;
+        overflow: hidden;
         white-space: normal;
 
         > a {
