--- a/less/navbar.less
+++ b/less/navbar.less
@@ -371,8 +371,8 @@
         display: block;
         width: 100%;
         //min-width: 250px;
-        min-width: 450px;
-        padding: 5px;
+        min-width: 400px;
+        padding: 5px 10px 5px 5px;
         overflow: hidden;
         white-space: normal;
 
