--- a/less/navbar.less
+++ b/less/navbar.less
@@ -371,8 +371,8 @@
         display: block;
         width: 100%;
         //min-width: 250px;
-        min-width: 400px;
-        padding: 5px 10px 5px 5px;
+        min-width: 385px;
+        padding: 5px 10px 5px 7px;
         overflow: hidden;
         white-space: normal;
 
@@ -391,7 +391,7 @@
         img {
           display: block;
           float: left;
-          margin: 0 8px 5px 2px;
+          margin: 0 8px 5px 0;
           //.img-thumbnail;
         }
 
