--- a/less/navbar.less
+++ b/less/navbar.less
@@ -175,8 +175,8 @@
 
 .container,
 .container-fluid {
-  > .navbar-collapse,
-  > .navbar-header {
+  > .navbar-header,
+  > .navbar-collapse {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -307,8 +307,8 @@
       border: 0;
       box-shadow: none;
 
-      .dropdown-header,
-      > li > a {
+      > li > a,
+      .dropdown-header {
         padding: 5px 15px 5px 25px;
       }
 
@@ -371,7 +371,7 @@
         display: block;
         width: 100%;
         //min-width: 250px;
-        min-width: 385px;
+        min-width: 365px;
         padding: 5px 10px 5px 7px;
         overflow: hidden;
         white-space: normal;
@@ -397,6 +397,10 @@
 
         + li {
           border-top: 1px dotted @gray;
+        }
+
+        .no-track {
+          padding-left: 20px;
         }
 
         &:last-child {
