--- a/less/navbar.less
+++ b/less/navbar.less
@@ -370,8 +370,7 @@
       > li {
         display: block;
         width: 100%;
-        //min-width: 250px;
-        min-width: 365px;
+        min-width: 350px;
         padding: 5px 10px 5px 7px;
         overflow: hidden;
         white-space: normal;
@@ -392,14 +391,13 @@
           display: block;
           float: left;
           margin: 0 8px 5px 0;
-          //.img-thumbnail;
         }
 
         + li {
           border-top: 1px dotted @gray;
         }
 
-        .no-track {
+        &.no-track {
           padding-left: 20px;
         }
 
