--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -77,11 +77,11 @@
     flex-direction: column;
     border-bottom: 1px solid @gray;
 
-    &.no-img {
+    // &.no-img {
       .tile-content {
         width: 100%;
       }
-    }
+    // }
   }
 
   .tile-img {
