--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -4855,6 +4855,7 @@ div.subsiteedit div.radiochoice label {
 
 .chooser .chooser-list, .chooser .chooser-list select {
   width: 200px;
+  height: 180px;
 }
 
 .chooser .chooser-list label {
@@ -5520,7 +5521,7 @@ audio, video {
   display: inline-block;
   background-color: #ffdec0;
   border: 1px solid #dbbea3;
-  color: #6d501d!important;
+  color: #6d501d !important;
   padding: 10px;
   border-radius: 2px;
 }
@@ -5692,10 +5693,10 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 #alert-edit-form .hint td.key {
   font-family: Monospace;
-  width: 20%;
+  width: 25%;
   text-align: left;
 }
 
 #alert-edit-form .hint td.desc {
-  width: 80%;
+  width: 75%;
 }
