--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -204,6 +204,14 @@ body:not(.FullWidthFrontpage) .double-column {
       }
     }
 
+    .single-column & {
+      .tiles-x {
+        .tilebox {
+          height: auto;
+        }
+      }
+    }
+
     .double-column & {
       .tiles-x {
         .tilebox {
