--- a/docs/assets/css/doctypes/nyarrangementsliste.css
+++ b/docs/assets/css/doctypes/nyarrangementsliste.css
@@ -1,4 +1,5 @@
-.cal-sorting [class*="col-"]:first-child .form-control {
+#event_type {
   padding-right: 1px;
   padding-left: 5px;
+  width: 100%;
 }
