--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -183,10 +183,12 @@ body:not(.FullWidthFrontpage) .double-column {
   .FullWidthFrontpage .triple-column,
   .double-column {
     .tiles-x:not(.tiles-plugin) {
-      height: @special-tiles-hight;
+      .tilebox {
+        height: @special-tiles-hight;
 
-      .tile-body {
-        display: block;
+        .tile-body {
+          display: block;
+        }
       }
     }
   }
@@ -208,7 +210,6 @@ body:not(.FullWidthFrontpage) .double-column {
     .tiles-x {
       .tilebox {
         height: @gridbox1;
-        // width: @default-col-width;
       }
     }
 
@@ -220,6 +221,7 @@ body:not(.FullWidthFrontpage) .double-column {
       }
     }
 
+    .FullWidthFrontpage .triple-column,
     .double-column & {
       .tiles-x {
         .tilebox {
