--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -138,7 +138,7 @@
 
 .one-two-column .column1,
 .quad-column,
-.triple-column,
+.triple-column, #gridsidebar,
 .two-one-column .column2,
 body:not(.FullWidthFrontpage) .double-column {
   .tiles-y {
