--- a/less/navbar.less
+++ b/less/navbar.less
@@ -370,7 +370,8 @@
       > li {
         display: block;
         width: 100%;
-        min-width: 350px;
+        //min-width: 350px;
+         min-width: 250px;
         padding: 5px 10px 5px 7px;
         overflow: hidden;
         white-space: normal;
@@ -391,6 +392,8 @@
           display: block;
           float: left;
           margin: 0 8px 5px 0;
+          // TODO: Slet:
+           .img-thumbnail;
         }
 
         + li {
