--- a/less/navbar.less
+++ b/less/navbar.less
@@ -370,8 +370,7 @@
       > li {
         display: block;
         width: 100%;
-        //min-width: 350px;
-         min-width: 250px;
+        min-width: 350px;
         padding: 5px 10px 5px 7px;
         overflow: hidden;
         white-space: normal;
@@ -389,11 +388,10 @@
         }
 
         img {
-          display: block;
+          display: none;
+          //display: block;
           float: left;
           margin: 0 8px 5px 0;
-          // TODO: Slet:
-           .img-thumbnail;
         }
 
         + li {
