--- a/less/navbar.less
+++ b/less/navbar.less
@@ -371,7 +371,8 @@
         display: block;
         width: 100%;
         min-width: 350px;
-        padding: 5px 10px 5px 7px;
+        //padding: 5px 10px 5px 7px;
+        padding: 5px 10px 5px 20px;
         overflow: hidden;
         white-space: normal;
 
