--- a/less/navbar.less
+++ b/less/navbar.less
@@ -372,7 +372,7 @@
         width: 100%;
         min-width: 350px;
         //padding: 5px 10px 5px 7px;
-        padding: 5px 10px 5px 20px;
+        padding: 5px 10px 5px 10px;
         overflow: hidden;
         white-space: normal;
 
@@ -400,7 +400,8 @@
         }
 
         &.no-track {
-          padding-left: 20px;
+          //padding-left: 20px;
+          padding-left: 10px;
         }
 
         &:last-child {
