--- a/docs/assets/css/doctypes/form.css
+++ b/docs/assets/css/doctypes/form.css
@@ -30,5 +30,10 @@
 }
 
 .form-group legend {
+  display: inline-block;
+  max-width: 100%;
   margin-bottom: 5px;
+  border-bottom: 0;
+  font-weight: 600;
+  font-size: inherit;
 }
