--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5703,7 +5703,7 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 /* Remove shortly */
 /* New subsite editing interface */
-#webstedinfo {
+/* #webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -5729,7 +5729,6 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 #webstedinfo .toggle {
   transform: rotate(-90deg);
   -ms-transform: rotate(-90deg);
-  /* IE 9 */
   -webkit-transform: rotate(-90deg);
   font-size: 16px;
   position: absolute;
@@ -5778,5 +5777,5 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-}
+} */
 /* end */
