--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -38,7 +38,7 @@
     display: flex;
     @media all and (max-width: @screen-xs-max) {
       // For iPhone
-      height: 50%;
+      max-height: 250px;
     }
 
     img {
