Img height fix in tiles for Safari

--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -34,7 +34,7 @@
 
   .tile-img {
     overflow: hidden;
-    flex: 1 1 auto; // 0 1 auto;
+    flex: 1 1 50%; // 0 1 auto;
     display: flex;
     @media all and (max-width: @screen-xs-max) {
       // For iPhone
